# blkarbs-profiling

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/blkarbs_profiling/: __init__.py  _core.py
tests/: test_core.py  test_properties.py
