[project]
name = "blkarbs-profiling"
version = "0.1.0"
description = "Reusable timing, throughput, and memory profiling utilities"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "blkarbs" },
]
dependencies = [
    "beartype>=0.18.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blkarbs_profiling"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=blkarbs_profiling --cov-branch --cov-fail-under=87"
